force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>If Buffing Powder Replacement Required value is (stage 7) NO then show the picklist values.</description>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bag Full</fullName>
            </value>
            <value>
                <fullName>Bag damage</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>