force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/ReturnReject__c.field-meta.xml
<CustomField>
    <fullName>ReturnReject__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ReturnReject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>