force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/Rim_Sure_Lock_Values__c.field-meta.xml
<CustomField>
    <fullName>Rim_Sure_Lock_Values__c</fullName>
    <label>Rim Sure Lock Values</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rim</fullName>
            </value>
            <value>
                <fullName>Sure Lock</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>