force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/Rim_Type__c.field-meta.xml
<CustomField>
    <fullName>Rim_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rim Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>