force-app/main/default/objects/ETT_Job_Card_Line_Item__c/fields/Vacuum_Valve__c.field-meta.xml
<CustomField>
    <fullName>Vacuum_Valve__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vacuum Valve</label>
    <length>10</length>
    <type>Text</type>
</CustomField>