force-app/main/default/objects/ETT_Job_Card_Line_Item__c/recordTypes/Buffing.recordType-meta.xml
<RecordType>
    <fullName>Buffing</fullName>
    <active>true</active>
    <label>Buffing</label>
</RecordType>