force-app/main/default/objects/ETT_Job_Card_Line_Item__c/recordTypes/Curing.recordType-meta.xml
<RecordType>
    <fullName>Curing</fullName>
    <active>true</active>
    <label>Curing</label>
</RecordType>