force-app/main/default/objects/ETT_Job_Card_Line_Item__c/recordTypes/ETT_Cementing.recordType-meta.xml
<RecordType>
    <fullName>ETT_Cementing</fullName>
    <active>true</active>
    <label>Cementing</label>
</RecordType>