force-app/main/default/objects/ETT_Job_Card_Line_Item__c/recordTypes/ETT_Thread_Preparation.recordType-meta.xml
<RecordType>
    <fullName>ETT_Thread_Preparation</fullName>
    <active>true</active>
    <label>Thread Preparation</label>
</RecordType>