force-app/main/default/objects/ETT_Job_Card_Line_Item__c/recordTypes/Filling.recordType-meta.xml
<RecordType>
    <fullName>Filling</fullName>
    <active>true</active>
    <label>Filling</label>
</RecordType>