force-app/main/default/objects/ETT_Job_Card_Line_Item__c/recordTypes/Final_Inspection.recordType-meta.xml
<RecordType>
    <fullName>Final_Inspection</fullName>
    <active>true</active>
    <label>Final Inspection</label>
</RecordType>