force-app/main/default/objects/ETT_Job_Card_Line_Item__c/recordTypes/Quality_Control.recordType-meta.xml
<RecordType>
    <fullName>Quality_Control</fullName>
    <active>true</active>
    <label>Quality Control</label>
</RecordType>