force-app/main/default/objects/ETT_Job_Card_Line_Item__c/recordTypes/Removal_of_RIM_Tube_Flap.recordType-meta.xml
<RecordType>
    <fullName>Removal_of_RIM_Tube_Flap</fullName>
    <active>true</active>
    <label>Removal of RIM Tube Flap</label>
</RecordType>