force-app/main/default/objects/ETT_Job_Card_Line_Item__c/recordTypes/Rimming_Enveloping.recordType-meta.xml
<RecordType>
    <fullName>Rimming_Enveloping</fullName>
    <active>true</active>
    <label>Rimming &amp; Enveloping</label>
</RecordType>