force-app/main/default/objects/ETT_Job_Card_Line_Item__c/recordTypes/Skiving.recordType-meta.xml
<RecordType>
    <fullName>Skiving</fullName>
    <active>true</active>
    <label>Skiving</label>
</RecordType>